--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@ava/typescript": "^4.1.0",
     "@changesets/cli": "^2.27.1",
     "ava": "^6.0.1",
+    "prettier": "^3.1.1",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
   },
