fix: ignore fixtures in test dir

--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
   },
   "ava": {
     "files": [
-      "test/**/*"
+      "test/**/*",
+      "!test/fixtures"
     ],
     "typescript": {
       "compile": "tsc",
