--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-state-graph",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "",
   "type": "commonjs",
   "main": "index.js",
@@ -9,6 +9,24 @@
   "files": [
     "./*"
   ],
+  "exports": {
+    ".": {
+      "types": "./index.d.ts",
+      "require": "./index.js",
+      "import": "./index.mjs"
+    },
+    "./legendState": {
+      "types": "./legendState/index.d.ts",
+      "require": "./legendState/index.js",
+      "import": "./legendState/index.mjs"
+    },
+    "./oneWayGraph": {
+      "types": "./oneWayGraph/index.d.ts",
+      "require": "./oneWayGraph/index.js",
+      "import": "./oneWayGraph/index.mjs"
+    }
+  },
+
   "publishConfig": {
     "access": "public",
     "directory": "./dist"
@@ -37,15 +55,17 @@
   },
   "tsup": {
     "dts": true,
-    "bundle": false,
+    "bundle": true,
     "treeshake": true,
-    "target": "node18",
+    "target": "node17",
     "format": [
       "esm",
       "cjs"
     ],
     "entry": [
-      "src/**/*.ts"
+      "src/index.ts",
+      "src/legendState/index.ts",
+      "src/oneWayGraph/index.ts"
     ]
   },
   "ava": {
