--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-state-graph",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "",
   "type": "commonjs",
   "main": "index.js",
@@ -86,5 +86,7 @@
       }
     }
   },
-  "dependencies": {}
+  "dependencies": {
+    "idb": "^8.0.0"
+  }
 }
