--- a/package.json
+++ b/package.json
@@ -87,6 +87,8 @@
     }
   },
   "dependencies": {
-    "idb": "^8.0.0"
+    "@types/uuid": "^9.0.8",
+    "idb": "^8.0.0",
+    "uuid": "^9.0.1"
   }
 }
